--- a/source/less/blocks/reason.less
+++ b/source/less/blocks/reason.less
@@ -1,8 +1,5 @@
 .reason {
-  margin: 0;
-  padding: 0;
   color: @text-light;
-  background-color: @text-info;
 
   display: flex;
   flex-direction: column;
@@ -11,61 +8,50 @@
 .reason__description {
   background-color: @text-info;
 
-  padding-top: 43px;
-  padding-bottom: 43px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  padding-left: @indent-side;
+  padding-right: @indent-side;
 }
-
 
 .reason__title {
   font-size: @title-font-size;
   line-height: @title-line-height;
   font-weight: 700;
+
+  margin: 0;
+  padding: 0;
+
   text-align: center;
 }
 
 .reason__index-number {
+  width: 60px;
+  margin: 0 auto;
+  margin-top: 10px;
+  margin-bottom: 15px;
 
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-  margin: 15px 130px;
+  display: block;
 }
 
 .reason__text {
-  margin: 0;
-  padding: 0;
-  padding-left: @indent-side;
-  padding-right: @indent-side;
-  display: inline-block;
+  width: @content-width;
+  margin: 0 auto;
+
+  display: block;
   text-align: center;
 }
 
-.reason__text-secondary {
-  margin-bottom: 0;
-}
-
 .reason--secondary {
-  color: @text-dark;
+  color: inherit;
   background-color: @text-secondary;
-  margin: 0;
-  padding: 0;
 }
 
 .reason__wrapper {
-  margin: 0;
-  padding: 0;
-  margin-left: @indent-side;
-  margin-right: @indent-side;
-
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 26px;
+  padding-bottom: 28px;
   width: @content-width;
   margin: 0 auto;
-}
-
-.reason__wrapper .reason__index-number {
-  margin-right: 110px;
-  margin-left: 110px;
 }
 
 .reason__border {
@@ -74,13 +60,13 @@
 
 .reason--decoration {
   position: relative;
-  padding-top: 77px;
+  padding-top: 67px;
 }
 
 .reason--decoration::before {
   content: "";
   position: absolute;
-  top: 0;
+  top: -10px;
   left: 50%;
   transform: translateX(-50%);
 
@@ -93,7 +79,7 @@
 }
 
 .reason__image {
-  min-height: 260px;
+  height: 260px;
   width: 320px;
   margin: 0 auto;
   background-color: #e2aa87;
@@ -106,6 +92,14 @@
   flex-direction: column;
 }
 
+@media (max-width: @mobile-width-only) {
+  .reason--road br:nth-child(2n+1),
+  .reason--small br,
+  .reason--bridge br {
+    display: none;
+  }
+}
+
 @media (min-width: @tablet-width) {
   .reason {
     flex-direction: row;
@@ -115,35 +109,39 @@
     visibility: hidden;
   }
 
-  .reason__description {
-    margin: 0;
+  .reason--decoration {
     padding: 0;
-    width: 256px;
+  }
+
+  .reason__description {
+    width: 33%;
     padding: 45px;
+    box-sizing: border-box;
+    flex-grow: 1;
+  }
+
+  .reason--secondary {
+    width: 255px;
+    padding-left: 45px;
+    padding-right: 45px;
     box-sizing: border-box;
   }
 
-  .reason__title {
-    margin: 0;
-    padding: 0;
+  .reason__index-number {
+    margin-bottom: 22px;
   }
 
-  .reason__index-number {
-    margin: 0;
-    padding: 0;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    margin-left: 53px;
-    margin-right: 53px;
+  .reason__title {
+    font-size: 21px;
   }
 
   .reason__text {
-    margin: 0;
-    padding: 0;
+    width: 165px;
   }
 
   .reason__image {
-    flex-grow: 1;
+    height: 255px;
+    width: 512px;
   }
 
   .reasons__reason-description {
@@ -160,85 +158,82 @@
   }
 
   .reason__wrapper {
-    width: @advantages-tablet-width;
-    margin: 0;
-    padding: 0;
-    padding: 30px 50px;
+    padding: 40px 0;
   }
 
   .reason__wrapper .reason__title {
-    margin: 0;
-    padding: 0;
-    margin-right: 25px;
-    margin-left: 25px;
+    width: 122px;
+    margin: 0 auto;
   }
 
   .reason__wrapper .reason__index-number {
-    margin-top: 15px;
-    margin-bottom: 30px;
-    margin-left: 52px;
-    margin-right: 52px;
-  }
-
-  .reason__text-secondary {
-    margin: 0;
-    padding: 0;
+    margin-bottom: 23px;
   }
 
   .reason__border {
     border-bottom: none;
   }
+
+  .reason--secondary:nth-child(2) br:nth-child(2n),
+  .reason--secondary:nth-child(3) br {
+    display: none;
+  }
 }
 
 @media (min-width: @desktop-width) {
   .reason {
-    flex-direction: row;
+    width: 1200px;
   }
 
   .reason__description {
-    margin: 0;
-    padding: 0;
+    padding: 51px 65px;
     width: 400px;
-    padding-top: 55px;
-    padding-bottom: 55px;
-    padding-right: 67px;
-    padding-left: 67px;
   }
 
-  .reason__index-number {
-    margin-left: 100px;
-    margin-right: 100px;
-  }
-
-  .reason__text {
-    margin: 0;
-    padding: 0;
-  }
-
-
-  .reason__image {
-    flex-grow: 1;
+  .reason--secondary {
+    width: 400px;
   }
 
   .reason__wrapper {
-    width: @advantages-desktop-width;
-    margin: 0;
-    padding: 0;
-    padding-top: 48px;
-    padding-bottom: 66px;
-    padding-left: 57px;
-    padding-right: 57px;
+    padding-bottom: 65px;
   }
 
-  .reason__wrapper .reason__title {
-    margin: 0;
-    padding: 0;
-    margin-right: 80px;
-    margin-left: 80px;
+  .reason__title {
+    width: 157px;
+    margin: 0 auto;
   }
 
-  .reason__wrapper .reason__index-number {
-    margin-left: 110px;
-    margin-right: 110px;
+  .reason__index-number {
+    margin-top: 12px;
+    margin-bottom: 20px;
+  }
+
+  .reason--secondary .reason__index-number {
+    margin-bottom: 21px;
+  }
+
+  .reason__text {
+    width: 270px;
+  }
+
+  .reason__image {
+    height: 258px;
+    width: 800px;
+    flex-grow: 1;
+    overflow: hidden;
+  }
+
+  .reason__image img {
+    margin-top: -70px;
+  }
+
+  .reason--secondary .reason__text {
+    width: 285px;
+    margin-right: 18px;
+  }
+
+  .reason--secondary:nth-child(2) br:nth-child(1),
+  .reason--secondary:nth-child(2) br:nth-child(2) {
+    display: none;
   }
 }
