--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,6 +1,7 @@
 @import "variables.less";
 @import "mixins.less";
-@import "blocks/global.less";
+@import "global.less";
+@import "normalize.less";
 @import "blocks/page-container.less";
 @import "blocks/advantages.less";
 @import "blocks/button.less";
@@ -19,3 +20,4 @@
 @import "blocks/reason.less";
 @import "blocks/reasons.less";
 @import "blocks/social.less";
+@import "blocks/pop-up.less";
