--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -10,15 +10,9 @@
 
 @semi-dark: #f2f2f2;
 
-@indent-side: 20px;
+@title-font-size: 18px;
 
-@tablet-padding-side: 60px;
-
-@desktop-padding-side: 120px;
-
-@desktop-commercial-padding: 80px;
-
-@indent-top: 23px;
+@placeholder-font-size: 18px;
 
 @main-nav-font-size: 18px;
 
@@ -56,9 +50,20 @@
 
 @tablet-content-width: 648px;
 
-@desktop-width: 1280px;
+@tablet-item-width: 324px;
+
+@tablet-padding-side: 60px;
+
+@desktop-width: 1200px;
+
+@desktop-padding-side: 120px;
+
+@desktop-commercial-padding: 80px;
 
 @mobile-width-only: 767px;
 
-@advantages-desktop-width: 288px;
+@pre-desktop-width-only: 1199px;
 
+@retina-dpi: 144dpi;
+
+@retina-dppx: 1.5dppx;
