--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -4,30 +4,87 @@
 }
 
 .form__group {
+  margin-top: 0;
+  margin-bottom: 0;
   border: none;
-  margin-top: @indent-top;
-  padding: 0;
-  padding-top: @indent-top;
-  padding-bottom: @padding-bottom;
-  border-bottom: @border;
-  padding-left: @indent-side;
-  padding-right: @indent-side;
 }
 
 .form__group-wrapper {
   display: flex;
 }
 
-.form__group-heading {
-
+.form__group-list {
   margin: 0;
   padding: 0;
-  text-align: center;
+  list-style: none;
+}
+
+.form__group-heading {
   font-size: @title-font-size;
   line-height: @title-line-height;
   font-weight: 700;
-  /* Временно, чтобы видеть сетку
-  border: 1px solid green;*/
+  text-align: center;
+
+  margin: 0;
+  padding: 0;
+}
+
+.form__group-item {
+  width: @content-width;
+  padding-bottom: 17px;
+
+  display: flex;
+}
+
+.form__group--impression .form__group-item {
+  padding-bottom: 0;
+  position: relative;
+}
+
+.form__group--impression .form__group-item::before {
+  content: "";
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 58px;
+  height: 58px;
+
+  background-color: #f2f2f2;
+  border-radius: 50%;
+}
+
+.form__group--impression .form__group-item:nth-child(1)::before {
+  background-image: url("../img/icon-radio.svg");
+  background-position: 47% 47%;
+  background-repeat: no-repeat;
+}
+
+.form__group--attractions .form__group-item {
+  position: relative;
+}
+
+.form__group--attractions .form__group-item::before {
+  content: "";
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 56px;
+  height: 56px;
+
+  background-color: #f2f2f2;
+  border-radius: 10%;
+}
+
+.form__group--attractions .form__group-item:nth-child(1)::before,
+.form__group--attractions .form__group-item:nth-child(2)::before,
+.form__group--attractions .form__group-item:nth-child(3)::before {
+  background-image: url("../img/icon-tick.svg");
+  background-position: 47% 47%;
+  background-repeat: no-repeat;
 }
 
 .form__group-title {
@@ -38,77 +95,8 @@
   margin: 0;
   padding: 0;
   padding-right: 15px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-
-  display: inline-block;
-}
-
-.form__title-phone {
-  margin: 0;
-  padding: 0;
-  margin-bottom: 15px;
-}
-
-.form__title-phone {
-  margin:0;
-  padding: 0;
-  margin-bottom: 15px;
-}
-
-.form__group-item {
-  width: @content-width;
-  display: flex;
-}
-
-.form__radio-title,
-.form__checkbox-title {
-  font-size: @placeholder-font-size;
-  line-height: @placeholder-line-height;
-  font-weight: 700;
-  text-transform: none;
-  display: inline-block;
-  margin-left: 80px;
-}
-
-.form__radio-title {
-  margin-top: @indent-side;
-  margin-bottom: @indent-side;
-}
-
-.form__checkbox-title {
-  margin-top: 31px;
-  margin-bottom: 31px;
-}
-
-li:nth-child(1) .form__checkbox-last {
-  margin-top: 17px;
-}
-
-li:nth-child(4) .form__checkbox-last {
-  margin-bottom: 17px;
-}
-
-.form__title-email {
-  margin: 0;
-  padding: 0;
-  margin-top: 15px;
-  margin-bottom: 15px;
-}
-
-li:nth-child(1) .form__checkbox-last {
-  margin-top: 17px;
-}
-
-li:nth-child(4) .form__checkbox-last {
-  margin-bottom: 17px;
-}
-
-.form__title-email {
-  margin: 0;
-  padding: 0;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  padding-top: 18.5px;
+  padding-bottom: 17px;
 }
 
 .form__field {
@@ -117,13 +105,10 @@ li:nth-child(4) .form__checkbox-last {
   font-weight: 700;
 
   margin: 0;
-  padding: 16px @indent-side;
+  padding: 14px 20px;
 
   border: 0;
   outline: none;
-
-  padding: 16px @indent-side;
-
   background-color: @semi-dark;
 
   display: block;
@@ -133,20 +118,33 @@ li:nth-child(4) .form__checkbox-last {
 
 .form__field-name {
   width: 82%;
-  margin-bottom: @indent-side;
 }
 
 .form__field-sername {
   width: 69%;
-  margin-bottom: @indent-side;
 }
 
 .form__field-patronym {
+  padding-left: 24px;
   width: 70%;
 }
 
 .form__item-contacts {
+  padding: 0;
   flex-direction: column;
+}
+
+.form__title-phone {
+  padding: 0;
+  margin-left: 22px;
+  margin-bottom: 8px;
+}
+
+.form__title-email {
+  padding: 0;
+  margin-top: 11px;
+  margin-left: 22px;
+  margin-bottom: 8px;
 }
 
 .form__group-content {
@@ -155,33 +153,13 @@ li:nth-child(4) .form__checkbox-last {
   display: flex;
 }
 
-.form__field-phone,
-.form__field-email {
+.form__field-phone {
+  padding-top: 12px;
   width: 79%;
 }
 
-.form__group-list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.form__inner {
-
-  margin: 0;
-  padding: 0;
-
-  padding-top: @indent-top;
-  padding-bottom: @padding-bottom;
-  text-align: center;
-  /*Временно, чтобы видеть сетку
-  border: 1px solid green;*/
-}
-
-.form__field-message {
-  width: 240px;
-  min-height: 160px;
-  margin-top: @indent-top;
+.form__field-email {
+  width: 67%;
 }
 
 .form__phone {
@@ -230,6 +208,50 @@ li:nth-child(4) .form__checkbox-last {
   background-repeat: no-repeat;
 }
 
+.form__radio-title,
+.form__checkbox-title {
+  font-size: @placeholder-font-size;
+  line-height: @placeholder-line-height;
+  font-weight: 700;
+
+  margin: 0;
+  padding: 0;
+  margin-left: 80px;
+
+  text-transform: none;
+  display: inline-block;
+}
+
+.form__radio-title {
+  margin-top: 17px;
+  margin-bottom: 26.5px;
+}
+
+.form__checkbox-title {
+  margin-top: 9.5px;
+  margin-bottom: 28px;
+}
+
+.form__checkbox-last {
+  margin-top: 26px;
+  margin-bottom: 2px;
+}
+
+.form__inner {
+  width: @content-width;
+  margin: 0 auto;
+  padding-top: 18px;
+  padding-bottom: @padding-bottom;
+
+  text-align: center;
+}
+
+.form__field-message {
+  width: 240px;
+  height: 130px;
+  margin-top: 18px;
+}
+
 .form__note {
   visibility: hidden;
 }
@@ -238,47 +260,86 @@ li:nth-child(4) .form__checkbox-last {
   .form__group {
     margin: 0 auto;
     width: @content-width;
-    margin-top: @indent-top;
-    padding: 0;
-    padding-top: @indent-top;
-    padding-bottom: @padding-bottom;
+    margin-top: 18px;
+    padding-top: 21px;
+    padding-bottom: 8px;
+  }
+
+  .form__wrapper {
     border-bottom: @border;
+  }
+
+  .form__group--contacts {
+    padding-bottom: 26px;
+  }
+
+  .form__group--impression {
+    padding-bottom: 18px;
   }
 }
 
 @media (min-width: @tablet-width) {
   .form {
+    width: 648px;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
   }
 
-  .form__group--impression {
+  .form__wrapper--impression {
     order: -1;
+    border-right: @border;
+    margin-bottom: 60px;
+  }
+
+  .form__group--attractions .form__group-wrapper {
+    margin-bottom: 32px;
+  }
+
+  .form__wrapper--name {
+    order: 0;
+  }
+
+  .form__group--name,
+  .form__group--impression {
+    padding: 0;
+    margin-right: 0;
+    margin-left: 0;
+    width: 323px;
   }
 
   .form__group--name {
-    order: 0;
-
     padding-left: 58px;
     box-sizing: border-box;
   }
 
-  .form__group {
-    width: @tablet-item-width;
+  .form__group--contacts,
+  .form__group--attractions {
     margin: 0;
     padding: 0;
-    border: none;
+    width: @tablet-content-width;
+    border-top: @border;
   }
 
-  .form__group-item {
-    width: 273px;
+  .form__group--attractions {
+    border-bottom: @border;
   }
 
-  .form__group--name .form__group-item {
-    width: 265px;
+  .form__inner .form__group-heading {
+    position: absolute;
+    top: 1580px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    display: block;
+    width: 400px;
+    height: 40px;
+    background-color: #ffffff;
+    text-align: center;
   }
 
   .form__group-heading {
+    font-size: 21px;
     text-align: left;
   }
 
@@ -286,24 +347,25 @@ li:nth-child(4) .form__checkbox-last {
   .form__group--attractions .form__group-heading {
     text-align: center;
     width: 400px;
-    padding-right: 55px;
-    padding-left: 55px;
+    padding-right: 57px;
+    padding-left: 56px;
   }
 
   .form__group--contacts .form__group-heading {
-    display: inline-block;
-    margin-bottom: 36px;
+    display: block;
+    margin-bottom: 25px;
   }
 
-  .form__group--contacts .form__group-heading {
-    display: inline-block;
-    margin-bottom: 36px;
+  .form__group--name .form__group-heading,
+  .form__group--impression .form__group-heading {
+    margin-bottom: 60px;
   }
 
-  .form__group--contacts {
-    margin: 0;
-    padding: 0;
-    width: @tablet-content-width;
+  .form__group--attractions .form__group-list {
+    width: 648px;
+
+    display: flex;
+    flex-wrap: wrap;
   }
 
   .form__group--contacts .form__item-contacts {
@@ -312,41 +374,127 @@ li:nth-child(4) .form__checkbox-last {
     width: @tablet-content-width;
   }
 
-  .form__field-phone,
-  .form__field-email {
-    width: 100%;
-  }
-
-  .form__field-patronym {
-    margin-bottom: 73px;
-  }
-
-  .form__group--attractions {
-    margin: 0;
-    padding: 0;
-    width: @tablet-content-width;
-  }
-
-  .form__group--attractions .form__group-list {
-    margin: 0;
-    padding: 0;
-    margin-left: 96px;
-    margin-right: 96px;
-    width: 459px;
-
-    display: flex;
-    flex-wrap: wrap;
+  .form__group--name .form__group-item {
+    width: 265px;
   }
 
   .form__group--attractions .form__group-item {
     margin: 0;
     padding: 0;
-    width: 228px;
+    width: 324px;
+  }
+
+  .form__group--name .form__group-title {
+    padding-top: 17px;
+  }
+
+  .form__title-email {
+    margin-top: 24px;
+  }
+
+  .form__radio-title {
+    margin-left: 76px;
+    margin-top: 15px;
+  }
+
+  .form__group-item:nth-child(1) .form__radio-title {
+    margin-bottom: 28px;
+  }
+
+  .form__group-item:nth-child(2) .form__radio-title {
+    margin-top: 23px;
+  }
+
+  .form__group--impression .form__group-item:nth-child(2)::before {
+    top: 10px;
+  }
+
+  .form__group-item:nth-child(3) .form__radio-title {
+    margin-top: 25px;
+  }
+
+  .form__group--impression .form__group-item:nth-child(3)::before {
+    top: 15px;
+  }
+
+
+  .form__checkbox-title {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .form__group-item:nth-child(1) .form__checkbox-title {
+    margin-top: 58px;
+    margin-bottom: 35px;
+    margin-left: 175px;
+  }
+
+  .form__group--attractions .form__group-item:nth-child(1)::before {
+    top: 45px;
+    left: 95px;
+  }
+
+  .form__group-item:nth-child(2) .form__checkbox-title {
+    margin-top: 58px;
+    margin-bottom: 35px;
+    margin-left: 112px;
+  }
+
+  .form__group--attractions .form__group-item:nth-child(2)::before {
+    top: 45px;
+    left: 30px;
+  }
+
+  .form__group-item:nth-child(3) .form__checkbox-title {
+    margin-top: 28px;
+    margin-bottom: 65px;
+    margin-left: 175px;
+  }
+
+  .form__group--attractions .form__group-item:nth-child(3)::before {
+    top: 15px;
+    left: 95px;
+  }
+
+  .form__group-item:nth-child(4) .form__checkbox-title {
+    margin-top: 28px;
+    margin-bottom: 65px;
+    margin-left: 110px;
+  }
+
+  .form__group--attractions .form__group-item:nth-child(4)::before {
+    top: 15px;
+    left: 30px;
+  }
+
+  .form__item-contacts:nth-child(2) .form__group-content {
+    margin-bottom: 50px;
+  }
+
+  .form__field-name {
+    padding-top: 10px;
+  }
+
+  .form__field-sername {
+    padding-top: 10px;
+  }
+
+  .form__field-patronym {
+    padding-top: 18px;
+  }
+
+  .form__field-phone {
+    width: 100%;
+  }
+
+  .form__field-email {
+    width: 85%;
   }
 
   .form__field-message {
     width: @tablet-content-width;
-    margin-top: 60px;
+    margin-top: 55px;
+    height: 160px;
 
     box-sizing: border-box;
   }
@@ -355,146 +503,16 @@ li:nth-child(4) .form__checkbox-last {
     visibility: visible;
 
     margin: 0;
-    margin-top: 24px;
+    margin-top: 44px;
 
     display: inline-block;
     width: @tablet-item-width;
     text-align: right;
-    margin: 0;
-    margin-top: 24px;
-  }
-
-  .form__group--name .form__group-heading,
-  .form__group--impression .form__group-heading {
-    margin: 0;
-    padding: 0;
-    margin-bottom: 60px;
-  }
-
-  li:nth-child(1) .form__radio-title {
-    margin-bottom: 28px;
-  }
-
-  li:nth-child(2) .form__radio-title {
-    margin-top: 28px;
-    margin-bottom: 28px;
-  }
-
-  li:nth-child(3) .form__radio-title {
-    margin-top: 28px;
-  }
-
-  .form__title-email {
-    margin-top: 30px;
-  }
-
-  .form__field-email {
-    margin-bottom: 56px;
-  }
-
-  .form__group--attractions .form__group-heading,
-  .form__group--contacts .form__group-heading {
-    width: 400px;
-    padding-right: 55px;
-    padding-left: 55px;
-  }
-
-  li:nth-child(1) .form__checkbox-title {
-    margin-top: 62px;
-    margin-bottom: 35px;
-  }
-
-  li:nth-child(2) .form__checkbox-title {
-    margin-top: 62px;
-    margin-bottom: 35px;
-  }
-
-  li:nth-child(3) .form__checkbox-title {
-    margin-top: 35px;
-    margin-bottom: 90px;
-  }
-
-  li:nth-child(4) .form__checkbox-title {
-    margin-top: 35px;
-    margin-bottom: 90px;
-  }
-
-  .form__checkbox-title {
-    margin-top: 0;
-    margin-bottom: 0;
   }
 
   .form__inner {
-    margin: 0;
-    padding: 0;
-    padding-bottom: 59px;
-    text-align: center;
-    /*Временно, чтобы видеть сетку
-    border: 1px solid green;*/
-  }
-
-  .form__field-message {
-    margin: 0;
-    margin-top: 60px;
-  }
-
-  .form__group--name .form__group-heading,
-  .form__group--impression .form__group-heading {
-    margin: 0;
-    padding: 0;
-    margin-bottom: 60px;
-  }
-
-  li:nth-child(1) .form__radio-title {
-    margin-bottom: 28px;
-  }
-
-  li:nth-child(2) .form__radio-title {
-    margin-top: 28px;
-    margin-bottom: 28px;
-  }
-
-  li:nth-child(3) .form__radio-title {
-    margin-top: 28px;
-  }
-
-  .form__title-email {
-    margin-top: 30px;
-  }
-
-  .form__field-email {
-    margin-bottom: 56px;
-  }
-
-  li:nth-child(1) .form__checkbox-title {
-    margin-top: 62px;
-    margin-bottom: 35px;
-  }
-
-  li:nth-child(2) .form__checkbox-title {
-    margin-top: 62px;
-    margin-bottom: 35px;
-  }
-
-  li:nth-child(3) .form__checkbox-title {
-    margin-top: 35px;
-    margin-bottom: 90px;
-  }
-
-  li:nth-child(4) .form__checkbox-title {
-    margin-top: 35px;
-    margin-bottom: 90px;
-  }
-
-  .form__checkbox-title {
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-
-  .form__inner {
-    padding-bottom: 59px;
+    padding-bottom: 32px;
     width: @tablet-content-width;
-    margin: 0 auto;
   }
 
   .form__bottom {
@@ -504,26 +522,97 @@ li:nth-child(4) .form__checkbox-last {
   }
 }
 
-@media (min-width: @transition-to-desktop) {
-  .form__group {
-    margin: 0 auto;
-  }
-}
-
 @media (min-width: @desktop-width) {
-  .form__group--name .form__group-item,
-  .form__group--impression .form__group-item {
-    width: 400px;
+  .form {
+    width: 960px;
   }
 
   .form__group--name,
   .form__group--impression {
-    margin: 0;
-    padding: 0;
+    width: 479px;
   }
 
-  .form__group--impression {
-    margin-right: 160px;
+  .form__group--name {
+    padding-left: 80px;
+  }
+
+  .form__group--attractions .form__group-wrapper {
+    margin-bottom: 60px;
+  }
+
+
+  .form__group--contacts .form__group-heading {
+    margin-bottom: 73px;
+  }
+
+  .form__group--impression .form__group-heading {
+    margin-left: 80px;
+  }
+
+  .form__group--contacts .form__group-list {
+    display: flex;
+  }
+
+  .form__group--name .form__group-list {
+    width: 100%;
+  }
+
+  .form__group--attractions .form__group-list {
+    width: 960px;
+  }
+
+  .form__inner .form__group-heading {
+    position: absolute;
+    top: 1420px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    display: block;
+    width: 400px;
+    height: 40px;
+    background-color: #ffffff;
+    text-align: center;
+  }
+
+  .form__item-contacts {
+    flex-direction: row;
+  }
+
+  .form__group--name .form__group-item {
+    width: 100%;
+  }
+
+  .form__group--attractions .form__group-item {
+    margin-top: 45px;
+    margin-bottom: 70px;
+    flex-grow: 1;
+  }
+
+  .form__group--contacts .form__item-contacts {
+    width: 400px;
+    margin-right: 80px;
+  }
+
+  .form__group--contacts .form__item-contacts:nth-child(2) {
+    margin: 0;
+    padding: 0;
+    width: 480px;
+  }
+
+  .form__title-phone,
+  .form__title-email {
+    margin: 0;
+    margin-right: 18px;
+    padding-top: 18px;
+    padding-bottom: 15px;
+  }
+
+  .form__group-content {
+    align-items: center;
+  }
+
+  .form__item-contacts:nth-child(1) .form__group-content {
+    margin-bottom: 50px;
   }
 
   .form__title-phone span {
@@ -531,42 +620,66 @@ li:nth-child(4) .form__checkbox-last {
     visibility: hidden;
   }
 
-  .form__group--contacts .form__item-contacts {
-    width: 400px;
-    margin-right: 80px;
-    margin-bottom: 52px;
+  .form__group--attractions .form__group-item {
+    width: 240px;
+    margin: 0;
   }
 
-  .form__group--contacts .form__item-contacts:nth-child(2) {
-    margin: 0;
-    padding: 0;
-    width: 480px;
-    margin-bottom: 52px;
+  .form__group--attractions .form__group-item:nth-child(1)::before,
+  .form__group--attractions .form__group-item:nth-child(2)::before {
+    top: 43px;
+  }
+
+  .form__group--attractions .form__group-item:nth-child(3)::before,
+  .form__group--attractions .form__group-item:nth-child(4)::before {
+    top: 45px;
+    left: 35px;
+  }
+
+  .form__group-item:nth-child(1) .form__checkbox-title {
+    margin-left: 80px;
+  }
+
+  .form__group--attractions .form__group-item:nth-child(1)::before {
+    left: 0;
+  }
+
+  .form__group-item:nth-child(2) .form__checkbox-title {
+    margin-left: 100px;
+  }
+
+  .form__group--attractions .form__group-item:nth-child(2)::before {
+    left: 20px;
+  }
+
+  .form__group-item:nth-child(3) .form__checkbox-title {
+    margin-left: 118px;
+    margin-top: 58px;
+    margin-bottom: 35px;
+  }
+
+  .form__group-item:nth-child(4) .form__checkbox-title {
+    margin-left: 115px;
+    margin-top: 58px;
+    margin-bottom: 35px;
   }
 
   .form__field-phone {
     width: 70%;
-  }
-
-  .form__phone,
-  .form__email {
+    padding-top: 17px;
+    padding-bottom: 16px;
   }
 
   .form__field-email {
     width: 80%;
+    padding-top: 16px;
+    padding-bottom: 16px;
     margin-bottom: 0;
   }
 
-  .form__group--contacts .form__group-heading {
-    margin-bottom: 77px;
-  }
-
-  .form__item-contacts {
-    flex-direction: row;
-  }
-
-  .form__group--contacts .form__group-list {
-    display: flex;
+  .form__field-message {
+    width: 100%;
+    margin-top: 30px;
   }
 
   .form__phone,
@@ -577,58 +690,18 @@ li:nth-child(4) .form__checkbox-last {
 
   .form__email {
     width: 63px;
-}
-
-  .form__title-phone,
-  .form__title-email {
-    margin: 0;
-    padding: 0;
-    margin-right: 15px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-  }
-
-  .form__group--attractions .form__group-list {
-    width: 960px;
-    margin: 0;
-  }
-
-  .form__group--attractions .form__group-item {
-    margin-top: 45px;
-    margin-bottom: 70px;
-    flex-grow: 1;
-    /*Временно чтобы видеть сетку
-    border: 1px solid red;*/
-  }
-
-  .form__group--impression .form__group-heading {
-    margin-left: 80px;
-  }
-
-  li:nth-child(1n) .form__checkbox-title {
-    margin: 0;
-    width: 100%;
-    text-align: right;
-    /*Временно чтобы видеть сетку
-    border: 1px solid green;*/
   }
 
   .form__inner {
     width: 960px;
+    padding-top: 40px;
   }
 
-  .form__field-message {
-    width: 100%;
-    box-sizing: border-box;
-    /*Временно чтобы видеть сетку
-    border: 1px solid green;*/
+  .form__bottom {
+    width: 960px;
   }
 
   .form__note {
     width: 480px;
-  }
-
-  .form__group-content {
-    align-items: center;
   }
 }
