--- a/source/less/blocks/logo.less
+++ b/source/less/blocks/logo.less
@@ -11,7 +11,16 @@
   z-index: 1;
 }
 
-.logo__image {
-  width: 102px;
-  height: 83px;
+@media (min-width: @tablet-width) {
+  .logo {
+    top: 0;
+    height: 93px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .logo {
+    width: 188px;
+    height: 97px;
+  }
 }
