--- a/source/less/blocks/page-container.less
+++ b/source/less/blocks/page-container.less
@@ -5,9 +5,8 @@
 
 @media (min-width: @desktop-width) {
   .page-container {
-
-    margin-left: 40px;
-    margin-right: 40px;
+    width: @desktop-width;
+    margin: 0 auto;
 
     background-color: #ffffff;
 
