--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -4,22 +4,18 @@
 }
 
 .page-form__button {
-
-  margin: 0;
-  margin-left: @indent-side;
-  margin-right: @indent-side;
-
-  margin-top: 25px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 24px;
   margin-bottom: 37px;
+  text-transform: uppercase;
 }
 
 @media (min-width: @tablet-width) {
   .page-form__button {
-
-    margin: 0;
-
     margin-bottom: 60px;
     width: @tablet-item-width;
+    padding-right: 18px;
   }
 
   .page-form__inner {
