--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,46 +1,181 @@
 .promo {
-  background-image: url("../img/bg-intro-triangle-mobile.svg"), url("../img/bg-back-mobile@1x.jpg");
-  background-position: 0 363px, 50% 0;
+  background-image: url("../img/bg-back-mobile@1x.jpg");
+  background-position: 50% 0;
   background-repeat: no-repeat;
   background-color: #e1eef6;
 
-  min-height: 390px;
+  height: 390px;
 
   position: relative;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+    background-size: 768px auto;
+  }
 }
+
+.promo::before {
+  content: "";
+
+  position: absolute;
+  top: 90px;
+  left: 50%;
+  transform: translateX(-50%);
+
+  width: 285px;
+  height: 215px;
+
+  background-image: url("../img/text-sedona-index-mobile.svg");
+  background-position: 0 0;
+  background-repeat: no-repeat;
+}
+
 
 .promo--inner {
-  background-position: 50% 131px, 60% 80%;
-  min-height: 158px;
+  background-position: 40% 80%;
+  height: 158px;
 }
 
+.promo--inner::before {
+  content: "";
 
+  position: absolute;
+  top: 52px;
+  left: 50%;
+  transform: translateX(-50%);
+
+  width: 230px;
+  height: 40px;
+
+  background-image: url("../img/text-sedona-mobile.svg");
+  background-position: 0 0;
+  background-repeat: no-repeat;
+}
+
+@media (max-width: @mobile-width-only) {
+  .promo::after {
+    content: "";
+
+    position: absolute;
+    top: 362px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    width: 323px;
+    height: 30px;
+
+    background-image: url("../img/bg-intro-triangle-mobile.svg");
+    background-position: 0 0;
+    background-repeat: no-repeat;
+  }
+
+  .promo--inner::after {
+    top: 131px;
+    height: 32px;
+  }
+}
 
 @media (min-width: @tablet-width) {
   .promo {
-    background-image: url("../img/bg-intro-triangle.png"), url("../img/bg-back-mobile@1x.jpg");
-    background-position: 50% 465px, 50% 0;
-    background-repeat: no-repeat;
+    background-image: url("../img/bg-back-tablet@1x.jpg");
     background-size: cover;
+    height: 519px;
 
-    min-height: 521px;
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
+      background-size: cover;
+    }
+  }
+
+  .promo::before {
+    content: "";
+
+    position: absolute;
+    top: 80px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    width: 465px;
+    height: 345px;
+
+    background-image: url("../img/text-sedona-index-tablet.svg");
+    background-position: 0 0;
+    background-repeat: no-repeat;
   }
 
   .promo--inner {
-    background-position: 50% 233px, 60% 80%;
-    min-height: 289px;
+    height: 290px;
+  }
+
+  .promo::after {
+    content: "";
+
+    position: absolute;
+
+    top: 462px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    width: 768px;
+    height: 61px;
+
+    background-image: url("../img/bg-intro-triangle-tablet.svg");
+    background-position: 0 0;
+    background-repeat: no-repeat;
+  }
+
+  .promo--inner::before {
+    content: "";
+
+    position: absolute;
+    top: 95px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    width: 460px;
+    height: 80px;
+
+    background-image: url("../img/text-sedona-tablet.svg");
+    background-position: 0 0;
+    background-repeat: no-repeat;
+  }
+
+  .promo--inner::after {
+    top: 233px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .promo {
-    background-image: url("../img/bg-intro-triangle.png"), url("../img/bg-back-mobile@1x.jpg");
-    background-position: 50% 465px, 50% 0;
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
+    }
+  }
+
+  .promo::after {
+    content: "";
+
+    position: absolute;
+
+    top: 463px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    width: @desktop-width;
+    height: 61px;
+
+    background-image: url("../img/bg-intro-triangle-desktop.svg");
+    background-position: 0 0;
     background-repeat: no-repeat;
   }
 
   .promo--inner {
-    background-position: 60% 80%;
-    min-height: 302px;
+    height: 302px;
+  }
+
+  .promo--inner::after {
+    top: 245px;
   }
 }
