--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -78,6 +78,7 @@
     background-image: url("../img/icon-cross.svg");
     background-position: 0 0;
     background-repeat: no-repeat;
+    visibility: hidden;
   }
 }
 
