--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -55,7 +55,7 @@
   }
 
   .main-nav__item:last-child {
-    box-shadow: inset 0 -3px 5px -3px rgba(0,0,0,0.35);
+    box-shadow: inset 0 -3px 5px -3px rgba(0, 0, 0, 0.35);
   }
 
   .main-nav--opened {
