--- a/source/less/blocks/scrolling.less
+++ b/source/less/blocks/scrolling.less
@@ -6,33 +6,33 @@
 
   width: 280px;
   height: 45px;
-  background-color: rgba(63,54,51,0.6);
+  background-color: rgba(63, 54, 51, 0.6);
   padding-top: 22px;
   box-sizing: border-box;
 }
 
-input[type=range] {
+input[type="range"] {
   -webkit-appearance: none;
   display: block;
   width: 235px;
   margin: 0 auto;
 }
 
-input[type=range]:focus {
+input[type="range"]:focus {
   outline: none;
 }
 
-input[type=range]::-webkit-slider-runnable-track {
+input[type="range"]::-webkit-slider-runnable-track {
   height: 3px;
   background: rgba(67, 59, 55, 0.5);
 }
 
-input[type=range]::-moz-range-track {
+input[type="range"]::-moz-range-track {
   height: 3px;
   background: rgba(67, 59, 55, 0.5);
 }
 
-input[type=range]::-webkit-slider-thumb {
+input[type="range"]::-webkit-slider-thumb {
   height: 9px;
   width: 9px;
   background: #ffffff;
@@ -41,7 +41,7 @@ input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
 }
 
-input[type=range]::-moz-range-thumb {
+input[type="range"]::-moz-range-thumb {
   height: 10px;
   width: 10px;
   background: #ffffff;
@@ -80,7 +80,7 @@ path {
     z-index: 0;
   }
 
-  input[type=range] {
+  input[type="range"] {
     width: 390px;
     margin: 0;
     margin-left: 94px;
@@ -122,7 +122,7 @@ path {
     width: 800px;
   }
 
-  input[type=range] {
+  input[type="range"] {
     width: 540px;
   }
 
