Поправила чекбоксы, радио, иконки телефон и мейл сделала псевдоэлементами

--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -29,6 +29,8 @@
 @media (min-width: @desktop-width) {
   .page-form__button {
     width: 480px;
+    padding-right: 0;
+    margin-top: 22px;
     margin-bottom: 67px;
   }
 
