--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -38,10 +38,29 @@
 
 .form__group--impression .form__group-item {
   padding-bottom: 0;
-  position: relative;
 }
 
-.form__group--impression .form__group-item::before {
+.form__radio {
+  display: none;
+}
+
+.form__radio-title,
+.form__checkbox-title {
+  font-size: @placeholder-font-size;
+  line-height: @placeholder-line-height;
+  font-weight: 700;
+  text-transform: none;
+}
+
+.form__radio-title {
+  display: inline-block;
+  position: relative;
+  padding-left: 80px;
+  padding-top: 17px;
+  padding-bottom: 26.5px;
+}
+
+.form__radio-title::before {
   content: "";
 
   position: absolute;
@@ -55,21 +74,41 @@
   border-radius: 50%;
 }
 
-.form__group--impression .form__group-item:nth-child(1)::before {
-  background-image: url("../img/icon-radio.svg");
-  background-position: 47% 47%;
-  background-repeat: no-repeat;
-}
-
-.form__group--attractions .form__group-item {
-  position: relative;
-}
-
-.form__group--attractions .form__group-item::before {
+ .form__radio:checked + .form__radio-title::after {
   content: "";
 
   position: absolute;
-  top: 0;
+  top: 15px;
+  left: 15px;
+
+  width: 25px;
+  height: 25px;
+
+  background-image: url("../img/icon-radio.svg");
+  background-repeat: no-repeat;
+}
+
+.form__checkbox {
+  display: none;
+}
+
+.form__checkbox-title {
+  display: inline-block;
+  position: relative;
+  padding-left: 80px;
+  padding-top: 9.5px;
+  padding-bottom: 28px;
+}
+
+.form__checkbox-last {
+  padding-bottom: 15px;
+}
+
+.form__checkbox-title::before {
+  content: "";
+
+  position: absolute;
+  top: -5px;
   left: 0;
 
   width: 56px;
@@ -79,11 +118,17 @@
   border-radius: 10%;
 }
 
-.form__group--attractions .form__group-item:nth-child(1)::before,
-.form__group--attractions .form__group-item:nth-child(2)::before,
-.form__group--attractions .form__group-item:nth-child(3)::before {
+ .form__checkbox:checked + .form__checkbox-title::after {
+  content: "";
+
+  position: absolute;
+  top: 16px;
+  left: 17px;
+
+  width: 23px;
+  height: 16px;
+
   background-image: url("../img/icon-tick.svg");
-  background-position: 47% 47%;
   background-repeat: no-repeat;
 }
 
@@ -151,90 +196,49 @@
   padding: 0;
   margin: 0;
   display: flex;
+  position: relative;
 }
 
 .form__field-phone {
-  padding-top: 12px;
-  width: 79%;
+  padding-top: 14px;
+  padding-bottom: 18px;
+  width: 100%;
+}
+
+.form__group-phone::after {
+  content: "";
+
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 225px;
+  width: 58px;
+  height: 58px;
+  background-color: #e6e6e6;
+  background-image: url("../img/icon-phone.svg");
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
 }
 
 .form__field-email {
-  width: 67%;
+  width: 100%;
+  padding-top: 14px;
+  padding-bottom: 18px;
 }
 
-.form__phone {
-  width: 58px;
-  height: 58px;
-  background: #e6e6e6;
-
-  position: relative;
-}
-
-.form__phone::before {
+.form__group-email::after {
   content: "";
 
   position: absolute;
-  top: 20px;
-  left: 20px;
-
-  width: 19px;
-  height: 19px;
-
-  background-image: url("../img/icon-phone.svg");
-  background-position: 0 0;
-  background-repeat: no-repeat;
-}
-
-.form__email {
+  display: block;
+  top: 0;
+  left: 225px;
   width: 58px;
   height: 58px;
-  background: #e6e6e6;
-
-  position: relative;
-}
-
-.form__email::before {
-  content: "";
-
-  position: absolute;
-  top: 20px;
-  left: 20px;
-
-  width: 17px;
-  height: 17px;
-
+  background-color: #e6e6e6;
   background-image: url("../img/icon-mail.svg");
-  background-position: 0 0;
+  background-position: 50% 50%;
   background-repeat: no-repeat;
-}
-
-.form__radio-title,
-.form__checkbox-title {
-  font-size: @placeholder-font-size;
-  line-height: @placeholder-line-height;
-  font-weight: 700;
-
-  margin: 0;
-  padding: 0;
-  margin-left: 80px;
-
-  text-transform: none;
-  display: inline-block;
-}
-
-.form__radio-title {
-  margin-top: 17px;
-  margin-bottom: 26.5px;
-}
-
-.form__checkbox-title {
-  margin-top: 9.5px;
-  margin-bottom: 28px;
-}
-
-.form__checkbox-last {
-  margin-top: 26px;
-  margin-bottom: 2px;
 }
 
 .form__inner {
@@ -393,16 +397,12 @@
   }
 
   .form__radio-title {
-    margin-left: 76px;
-    margin-top: 15px;
-  }
-
-  .form__group-item:nth-child(1) .form__radio-title {
-    margin-bottom: 28px;
+    padding-left: 76px;
+    padding-top: 15px;
   }
 
   .form__group-item:nth-child(2) .form__radio-title {
-    margin-top: 23px;
+    margin-top: 10px;
   }
 
   .form__group--impression .form__group-item:nth-child(2)::before {
@@ -410,61 +410,76 @@
   }
 
   .form__group-item:nth-child(3) .form__radio-title {
-    margin-top: 25px;
+    margin-top: 10px;
   }
 
   .form__group--impression .form__group-item:nth-child(3)::before {
     top: 15px;
   }
 
-
-  .form__checkbox-title {
+  .form__checkbox-bridge {
     margin-top: 0;
     margin-bottom: 0;
+    padding-top: 58px;
+    padding-bottom: 35px;
+    padding-left: 175px;
   }
 
-  .form__group-item:nth-child(1) .form__checkbox-title {
-    margin-top: 58px;
-    margin-bottom: 35px;
-    margin-left: 175px;
-  }
-
-  .form__group--attractions .form__group-item:nth-child(1)::before {
+  .form__checkbox-bridge::before {
     top: 45px;
     left: 95px;
   }
 
-  .form__group-item:nth-child(2) .form__checkbox-title {
-    margin-top: 58px;
-    margin-bottom: 35px;
-    margin-left: 112px;
+  .form__checkbox:checked + .form__checkbox-bridge::after {
+    top: 65px;
+    left: 115px;
   }
 
-  .form__group--attractions .form__group-item:nth-child(2)::before {
+  .form__checkbox-mountain {
+    padding-top: 58px;
+    padding-left: 110px;
+  }
+
+  .form__checkbox-mountain::before {
     top: 45px;
     left: 30px;
   }
 
-  .form__group-item:nth-child(3) .form__checkbox-title {
-    margin-top: 28px;
-    margin-bottom: 65px;
-    margin-left: 175px;
+  .form__checkbox:checked + .form__checkbox-mountain::after {
+    top: 65px;
+    left: 45px;
   }
 
-  .form__group--attractions .form__group-item:nth-child(3)::before {
+  .form__checkbox-park {
+    padding-top: 28px;
+    padding-bottom: 65px;
+    padding-left: 175px;
+  }
+
+  .form__checkbox-park::before {
     top: 15px;
     left: 95px;
   }
 
-  .form__group-item:nth-child(4) .form__checkbox-title {
-    margin-top: 28px;
-    margin-bottom: 65px;
-    margin-left: 110px;
+  .form__checkbox:checked + .form__checkbox-park::after {
+    top: 33px;
+    left: 112px;
   }
 
-  .form__group--attractions .form__group-item:nth-child(4)::before {
+  .form__checkbox-last {
+    padding-top: 28px;
+    padding-bottom: 65px;
+    padding-left: 110px;
+  }
+
+  .form__checkbox-last::before {
     top: 15px;
     left: 30px;
+  }
+
+  .form__checkbox:checked + .form__checkbox-last::after {
+    top: 33px;
+    left: 45px;
   }
 
   .form__item-contacts:nth-child(2) .form__group-content {
@@ -479,16 +494,13 @@
     padding-top: 10px;
   }
 
+  .form__group-phone::after,
+  .form__group-email::after {
+    left: 590px;
+  }
+
   .form__field-patronym {
     padding-top: 18px;
-  }
-
-  .form__field-phone {
-    width: 100%;
-  }
-
-  .form__field-email {
-    width: 85%;
   }
 
   .form__field-message {
@@ -537,7 +549,7 @@
   }
 
   .form__group--attractions .form__group-wrapper {
-    margin-bottom: 60px;
+    margin-bottom: 0;
   }
 
 
@@ -563,8 +575,8 @@
 
   .form__inner .form__group-heading {
     position: absolute;
-    top: 1420px;
-    left: 50%;
+    top: 1422px;
+    left: 50.8%;
     transform: translateX(-50%);
 
     display: block;
@@ -585,7 +597,7 @@
   .form__group--attractions .form__group-item {
     margin: 0;
     margin-top: 45px;
-    margin-bottom: 70px;
+    margin-bottom: 28px;
     flex-grow: 1;
     width: 240px;
   }
@@ -622,71 +634,114 @@
     visibility: hidden;
   }
 
-  .form__group--attractions .form__group-item:nth-child(1)::before,
-  .form__group--attractions .form__group-item:nth-child(2)::before {
-    top: 43px;
+  .form__radio-title {
+    padding-left: 79px;
+    padding-top: 13px;
   }
 
-  .form__group--attractions .form__group-item:nth-child(3)::before,
-  .form__group--attractions .form__group-item:nth-child(4)::before {
-    top: 45px;
-    left: 35px;
+  .form__radio-title::before {
+    left: 5px;
   }
 
-  .form__group-item:nth-child(1) .form__checkbox-title {
-    margin-left: 80px;
-  }
-
-  .form__group--attractions .form__group-item:nth-child(1)::before {
-    left: 0;
-  }
-
-  .form__group-item:nth-child(2) .form__checkbox-title {
-    margin-left: 100px;
-  }
-
-  .form__group--attractions .form__group-item:nth-child(2)::before {
+  .form__radio:checked + .form__radio-title::after {
     left: 20px;
   }
 
-  .form__group-item:nth-child(3) .form__checkbox-title {
-    margin-left: 118px;
-    margin-top: 58px;
-    margin-bottom: 35px;
+  .form__group-item:nth-child(2) .form__radio-title {
+    margin-top: 13px;
   }
 
-  .form__group-item:nth-child(4) .form__checkbox-title {
-    margin-left: 115px;
-    margin-top: 58px;
-    margin-bottom: 35px;
+  .form__group-item:nth-child(3) .form__radio-title {
+    margin-top: 13px;
+  }
+
+  .form__checkbox-bridge {
+    padding-top: 14px;
+    padding-left: 80px;
+  }
+
+  .form__checkbox-bridge::before {
+    top: 0;
+    left: 0;
+  }
+
+  .form__checkbox:checked + .form__checkbox-bridge::after {
+    top: 20px;
+    left: 20px;
+  }
+
+  .form__checkbox-mountain {
+    padding-top: 14px;
+    padding-left: 102px;
+  }
+
+  .form__checkbox-mountain::before {
+    top: 0;
+    left: 20px;
+  }
+
+  .form__checkbox:checked + .form__checkbox-mountain::after {
+    top: 20px;
+    left: 38px;
+  }
+
+  .form__checkbox-park {
+    padding-top: 14px;
+    padding-left: 120px;
+  }
+
+  .form__checkbox-park::before {
+    top: 0;
+    left: 38px;
+  }
+
+  .form__checkbox:checked + .form__checkbox-park::after {
+    top: 20px;
+    left: 55px;
+  }
+
+  .form__checkbox-last {
+    padding-top: 14px;
+    padding-left: 115px;
+  }
+
+  .form__checkbox-last::before {
+    top: 0;
+    left: 35px;
+  }
+
+  .form__checkbox:checked + .form__checkbox-last::after {
+    top: 20px;
+    left: 52px;
+  }
+
+  .form__field {
+    width: 315px;
+    box-sizing: border-box;
   }
 
   .form__field-phone {
-    width: 70%;
     padding-top: 17px;
     padding-bottom: 16px;
   }
 
   .form__field-email {
-    width: 80%;
     padding-top: 17px;
     padding-bottom: 16px;
     margin-bottom: 0;
   }
 
+  .form__group-phone::after {
+    left: 256px;
+  }
+
+  .form__group-email::after {
+    left: 256px;
+  }
+
   .form__field-message {
     width: 100%;
-    margin-top: 30px;
-  }
-
-  .form__phone,
-  .form__email {
-    margin: 0;
-    padding: 0;
-  }
-
-  .form__email {
-    width: 63px;
+    margin-top: 33px;
   }
 
   .form__inner {
