--- a/source/less/blocks/logo.less
+++ b/source/less/blocks/logo.less
@@ -1,7 +1,7 @@
 .logo {
   position: absolute;
 
-  top: 223px;
+  top: 224px;
   left: 50%;
   transform: translateX(-50%);
 
@@ -10,6 +10,10 @@
 
   z-index: 1;
 }
+
+  .main-nav--closed .logo {
+    top: 0;
+  }
 
 @media (min-width: @tablet-width) {
   .logo {
