--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -22,33 +22,22 @@
   text-decoration: none;
 }
 
-.main-nav__wrapper {
-  width: @content-width;
-  margin: 0 auto;
-  padding-top: 14px;
-  padding-bottom: 17px;
-}
-
-.main-nav__button {
-  width: 25px;
-  height: 25px;
-  margin-left: 257px;
-
-  border: 0;
-  padding: 0;
-  background-color: inherit;
-}
-
-.main-nav--closed {
-  display: block;
-}
-
-.main-nav__image {
-  display: block;
-  margin: 0 auto;
-}
-
 @media (max-width: @mobile-width-only) {
+  .main-nav {
+    position: relative;
+    display: flex;
+    flex-direction: column-reverse;
+    min-height: 280px;
+    width: 320px;
+    margin: 0 auto;
+  }
+
+  .main-nav__list {
+    position: absolute;
+    top: 0;
+    width: 320px;
+  }
+
   .main-nav__item {
     border-top: 1px solid #9ac2db;
     border-bottom: 1px solid #678fa8;
@@ -58,32 +47,83 @@
     box-shadow: inset 0 -3px 5px -3px rgba(0, 0, 0, 0.35);
   }
 
-  .main-nav--opened {
+  .main-nav__button,
+  .main-nav__button:hover,
+  .main-nav__button:active {
+    position: absolute;
+    top: 240px;
+    left: 277px;
+
+    width: 25px;
+    height: 25px;
+    z-index: 2;
     display: block;
-    position: relative;
-    width: 320px;
-    margin: 0 auto;
+    border: none;
+    background-color: inherit;
+    cursor: pointer;
   }
 
-  .main-nav--opened::after {
+  .main-nav--closed .main-nav__button::before,
+  .main-nav--closed .main-nav__button:hover::before,
+  .main-nav--closed .main-nav__button:active::before {
     content: "";
 
     position: absolute;
-    top: 10px;
-    left: 277px;
-
-    width: 22.5px;
-    height: 22.5px;
-
-    background-image: url("../img/icon-cross.svg");
-    background-position: 0 0;
+    top: 0;
+    left: 0;
+    width: 25px;
+    height: 22px;
+    background-image: url("../img/icon-menu.svg");
     background-repeat: no-repeat;
-    visibility: hidden;
+  }
+
+  .main-nav--opened .main-nav__button,
+  .main-nav--opened .main-nav__button:hover,
+  .main-nav--opened .main-nav__button:active {
+    content: "";
+
+    position: absolute;
+    top: 17px;
+    left: 277px;
+    width: 25px;
+    height: 25px;
+    background-image: url("../img/icon-cross.svg");
+    background-repeat: no-repeat;
+  }
+
+  .main-nav--opened-simple .main-nav__button {
+    position: absolute;
+    top: 240px;
+    left: 277px;
+    width: 25px;
+    height: 22px;
+    background-image: url("../img/icon-menu.svg");
+    background-repeat: no-repeat;
+  }
+
+  .main-nav--closed .main-nav__item {
+    display: none;
+  }
+
+  .main-nav.main-nav--closed {
+    min-height: 56px;
+  }
+
+.main-nav--closed .main-nav__button {
+  top: 17px;
+}
+
+  .main-nav--opened .main-nav__item {
+    display: block;
+  }
+
+  .main-nav--opened-simple .main-nav__item {
+    display: block;
   }
 }
 
 @media (min-width: @tablet-width) {
-  .main-nav__wrapper,
+  .main-nav__wrapper-button,
   .main-nav__button {
     display: none;
   }
