--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -24,7 +24,7 @@
 }
 
 .page-footer--photo {
-  padding-top: 70px;
+  padding-top: 5px;
 }
 
 @media (min-width: @tablet-width) {
@@ -49,5 +49,9 @@
   .page-footer {
     width: 1200px;
     padding: 33px 120px;
+  }
+
+  .page-footer--photo {
+    padding-top: 38px;
   }
 }
